# jarvis

./: .gitignore  Cargo.toml  README.md  general.txt  greeting.txt  main.cpp  model.cpp  model.h  model.rs  tokenizer.cpp  tokenizer.h  wikipedia.txt
benches/: tokenizer_bench.rs
knowledge/: train.sh
src/: lib.rs  main.rs  model.rs  tokenizer.rs
